Mobile still using skrollr any further commits will be to fix skrollor on mobile, fix design tweaks, fix browser issues

--- a/sass/modules/_animations.scss
+++ b/sass/modules/_animations.scss
@@ -92,21 +92,33 @@
   @include trans(.5s, ease-in-out);
   @include transform-scale(0);
   @include trans-delay(.3s);
+  @include media($mobile) {
+    @include transform-scale(1);
+  }
 }
 .service1 img, .service2 {
   @include trans(.5s, ease-in-out);
   @include transform-scale(0);
   @include trans-delay(.4s);
+  @include media($mobile) {
+    @include transform-scale(1);
+  }
 }
 .service2 img, .service3 {
   @include trans(.5s, ease-in-out);
   @include transform-scale(0);
   @include trans-delay(.5s);
+  @include media($mobile) {
+    @include transform-scale(1);
+  }
 }
 .service3 img {
   @include trans(.5s, ease-in-out);
   @include transform-scale(0);
   @include trans-delay(.6s);
+  @include media($mobile) {
+    @include transform-scale(1);
+  }
 }
 .skrollable-after {
   .service1, .service2, .service3, .service1 img, .service2 img, .service3 img {
