--- a/sass/partials/_grid.scss
+++ b/sass/partials/_grid.scss
@@ -11,30 +11,43 @@ section {
 }
 .inner-container {
 	position: relative;
-	z-index: 3;
+	z-index: 2;
 	@include outer-container(994px);
 	@include media($tablet) {
 		@include outer-container(748px);
 	}
 	@include media($mobile) {
 		@include outer-container(100%);
+		@include pad(0px 10px 0px 10px);
 	}
 }
 .three-column {
 	@include span-columns(4);
 	@include media($mobile) {
-		@include span-columns(4);
+		@include span-columns(4 of 4);
+		display: block;
+		float: none;
 	}
 }
 .three-column_centered {
 	@include span-columns(8);
 	@include shift(2);
+	@include media($mobile) {
+		@include span-columns(4 of 4);
+		@include shift(0);
+		display: block;
+		float: none;
+	}
 }
 .containing-column {
 	@include span-columns(8);
 	@include shift(2);
 	@include media($tablet) {
 		@include span-columns(12);
+		@include shift(0);
+	}
+	@include media($mobile) {
+		@include span-columns(4);
 		@include shift(0);
 	}
 }
@@ -49,6 +62,13 @@ section {
 			padding-right: 50px;
 		}
 	}
+	@include media($mobile) {
+		@include span-columns(4 of 4);
+		display: block;
+		float: none;
+		margin-bottom: 5px;
+		padding: 0 !important;
+	}
 }
 .message-column {
 	@include span-columns(8 of 8);
@@ -56,6 +76,10 @@ section {
 		@include span-columns(12 of 12);
 		padding-left: 50px;
 		padding-right: 50px;
+	}
+	@include media($mobile) {
+		@include span-columns(4 of 4);
+		padding: 0 !important;
 	}
 }
 .row {
